--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "Shane Rogers",
+	"description": "A project that will help better my skills",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
