--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Shane Rogers",
 	"description": "A project that will help better my skills",
 	"keywords": [ "help", "self-improvement", "tutorial", "freecodecamp" ],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
