--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "A project that will help better my skills",
 	"keywords": [ "help", "self-improvement", "tutorial", "freecodecamp" ],
 	"license": "MIT",
+	"version": "1.1.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
